# src/main/kotlin/red/rabbit/models/event/EventRequest.kt
@@ -1,0 +1,30 @@
+package red.rabbit.models.event
+
+import kotlinx.serialization.KSerializer
+import kotlinx.serialization.Serializable
+import kotlinx.serialization.Serializer
+import kotlinx.serialization.encoding.Decoder
+import kotlinx.serialization.encoding.Encoder
+import java.time.LocalDate
+import java.time.format.DateTimeFormatter
+
+@Serializable
+data class EventRequest(
+    val id: Int,
+    @Serializable(with = LocalDateSerializer::class)
+    val date: LocalDate,
+    val habitId: Int
+)
+
+@Serializer(forClass = LocalDate::class)
+class LocalDateSerializer : KSerializer<LocalDate> {
+    private val formatter: DateTimeFormatter = DateTimeFormatter.ISO_LOCAL_DATE
+
+    override fun serialize(encoder: Encoder, value: LocalDate) {
+        encoder.encodeString(value.format(formatter))
+    }
+
+    override fun deserialize(decoder: Decoder): LocalDate {
+        return LocalDate.parse(decoder.decodeString(), formatter)
+    }
+}
