# src/main/resources/openapi/documentation.yaml
@@ -10,6 +10,8 @@ tags:
     description: Auth API
   - name: habits
     description: Habits API
+  - name: events
+    description: Events API
 paths:
   /auth/login:
     post:
@@ -174,6 +176,45 @@ paths:
               schema:
                 type: boolean
 
+  /events:
+    get:
+      tags:
+        - events
+      description: "Get all events"
+      security:
+        - bearerAuth: [ ]
+      responses:
+        200:
+          description: "Ok"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Event"
+
+  /events/add:
+    post:
+      tags:
+        - events
+      description: "Add a new events"
+      security:
+        - bearerAuth: [ ]
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/Event"
+      responses:
+        200:
+          description: "Ok"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Event"
+        400:
+          description: "Invalid input"
+
+
 components:
   securitySchemes:
     bearerAuth:
@@ -207,7 +248,6 @@ components:
           type: string
           format: password
           example: password
-
     Habit:
       type: object
       properties:
@@ -220,3 +260,15 @@ components:
         isGood:
           type: boolean
           example: true
+    Event:
+      type: object
+      properties:
+        id:
+          type: integer
+          example: 1
+        date:
+          type: string
+          example: 2024-12-31
+        habitId:
+          type: integer
+          example: 1
